--- a/pom.xml
+++ b/pom.xml
@@ -13,12 +13,12 @@
 	<properties>
 		<!-- Make build platform independent -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<!-- general -->
+		<!-- General -->
 		<java.version>1.8</java.version>
 		<maven-compiler.version>3.5</maven-compiler.version>
 		<exec-maven.version>1.2.1</exec-maven.version>
         <!-- TODO : Change main class -->
-		<main-class>ca.ulaval.glo4003.projet.base.ProjetBaseMain</main-class>
+		<main-class>ca.ulaval.glo4003.Main</main-class>
 		<!-- REST -->
 		<jetty.version>[9.3.24.v20180605,)</jetty.version>
 		<jersey.version>2.8</jersey.version>
