--- a/pom.xml
+++ b/pom.xml
@@ -17,10 +17,9 @@
 		<java.version>1.8</java.version>
 		<maven-compiler.version>3.5</maven-compiler.version>
 		<exec-maven.version>1.2.1</exec-maven.version>
-        <!-- TODO : Change main class -->
 		<main-class>ca.ulaval.glo4003.Main</main-class>
 		<!-- REST -->
-		<jetty.version>[9.3.24.v20180605,)</jetty.version>
+		<jetty.version>9.3.24.v20180605</jetty.version>
 		<jersey.version>2.8</jersey.version>
 		<javax.ws.rs.version>2.1</javax.ws.rs.version>
         <!-- Tests -->
