--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
 		<google.truth.version>1.0</google.truth.version>
 		<javax.xml.bind.version>2.2.12</javax.xml.bind.version>
 		<javax.activation.version>1.1.1</javax.activation.version>
+		<!-- Code style -->
+		<maven-git-code-format.version>1.39</maven-git-code-format.version>
+		<!-- Deployment -->
+        <!-- TODO : Check if deployment is needed -->
+		<jar-file-name>spamd-ul</jar-file-name>
 	</properties>
 
 	<dependencies>
@@ -129,7 +134,9 @@
 	</dependencies>
 
 	<build>
+		<finalName>${jar-file-name}</finalName>
 		<plugins>
+			<!-- General -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -146,6 +153,26 @@
 				<configuration>
 					<mainClass>${main-class}</mainClass>
 				</configuration>
+			</plugin>
+			<!-- Style -->
+			<plugin>
+				<groupId>com.cosium.code</groupId>
+				<artifactId>maven-git-code-format</artifactId>
+				<version>${maven-git-code-format.version}</version>
+				<executions>
+					<execution>
+						<id>install-formatter-hook</id>
+						<goals>
+							<goal>install-hooks</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>validate-code-format</id>
+						<goals>
+							<goal>validate-code-format</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
