[FEATURE] Add jacoco reports

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,3 +18,5 @@ jobs:
         run: mvn git-code-format:validate-code-format
       - name: Unit tests
         run: mvn test
+      - name: Code coverage
+        run: mvn jacoco:report
