--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,8 @@
 		<google.truth.version>1.0</google.truth.version>
 		<javax.xml.bind.version>2.2.12</javax.xml.bind.version>
 		<javax.activation.version>1.1.1</javax.activation.version>
+		<!-- Code coverage -->
+		<jacoco-maven-plugin.version>0.8.6</jacoco-maven-plugin.version>
 		<!-- Code style -->
 		<maven-git-code-format.version>1.39</maven-git-code-format.version>
 		<!-- Deployment -->
@@ -153,6 +155,26 @@
 				<configuration>
 					<mainClass>${main-class}</mainClass>
 				</configuration>
+			</plugin>
+			<!-- Code coverage -->
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>${jacoco-maven-plugin.version}</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>generate-code-coverage-report</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 			<!-- Style -->
 			<plugin>
