--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
         <!-- Tests -->
 		<junit.version>4.12</junit.version>
 		<mockito.version>2.0.1-beta</mockito.version>
+		<!-- TODO : Check if javafaker is allowed -->
+		<javafaker.version>1.0.2</javafaker.version>
 		<rest-assured.version>4.0.0</rest-assured.version>
 		<hamcrest.version>1.3</hamcrest.version>
 		<google.truth.version>1.0</google.truth.version>
@@ -98,6 +100,11 @@
 			<artifactId>mockito-all</artifactId>
 			<version>${mockito.version}</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.github.javafaker</groupId>
+			<artifactId>javafaker</artifactId>
+			<version>${javafaker.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.rest-assured</groupId>
