--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 		<jersey.version>2.8</jersey.version>
 		<javax.ws.rs.version>2.1</javax.ws.rs.version>
         <!-- Tests -->
-		<junit.version>4.12</junit.version>
+		<junit.version>5.7.0</junit.version>
 		<mockito.version>2.0.1-beta</mockito.version>
 		<rest-assured.version>4.0.0</rest-assured.version>
 		<hamcrest.version>1.3</hamcrest.version>
@@ -90,12 +90,24 @@
 			<version>${javax.ws.rs.version}</version>
 		</dependency>
 		<!-- Tests -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>${junit.version}</version>
-			<scope>test</scope>
-		</dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-launcher</artifactId>
+            <version>1.7.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
+            <version>5.7.0</version>
+            <scope>test</scope>
+        </dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-all</artifactId>
