--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
 		<junit.version>4.13</junit.version>
 		<javafaker.version>1.0.2</javafaker.version>
 		<mockito.version>2.0.2-beta</mockito.version>
+		<!-- TODO : Check if REST assured is used -->
 		<rest-assured.version>4.3.1</rest-assured.version>
 		<hamcrest.version>2.2</hamcrest.version>
 		<google.truth.version>1.0.1</google.truth.version>
