[FEATURE] Test Newman Actions

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,5 +1,9 @@
 name: Deploy
 on:
+  pull_request:
+    branches:
+      - master
+      - develop
   push:
     branches:
       - master
@@ -14,3 +18,8 @@ jobs:
         run: mvn clean install &&
           HEROKU_API_KEY=${{ secrets.HEROKU_API_KEY }}
           mvn clean heroku:deploy
+      - uses: matt-ball/newman-action@master
+      - name: Integration tests
+         with:
+           collection: resources/postman_collection.integration_tests.json
+           environment: resources/postman_environment.json
