--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,8 +18,8 @@ jobs:
         run: mvn clean install &&
           HEROKU_API_KEY=${{ secrets.HEROKU_API_KEY }}
           mvn clean heroku:deploy
-      - uses: matt-ball/newman-action@master
       - name: Integration tests
+        uses: matt-ball/newman-action@master
         with:
           collection: resources/postman_collection.integration_tests.json
           environment: resources/postman_environment.json
