--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 		<jetty.version>9.4.31.v20200723</jetty.version>
 		<jersey.version>2.8</jersey.version>
 		<javax.ws.rs.version>2.1.1</javax.ws.rs.version>
+		<javax.mail.version>1.5.0-b01</javax.mail.version>
         <!-- Tests -->
 		<junit.version>4.13</junit.version>
 		<javafaker.version>1.0.2</javafaker.version>
@@ -90,6 +91,11 @@
 			<groupId>javax.ws.rs</groupId>
 			<artifactId>javax.ws.rs-api</artifactId>
 			<version>${javax.ws.rs.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>${javax.mail.version}</version>
 		</dependency>
 		<!-- Tests -->
 		<dependency>
