--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 		<jersey.version>2.8</jersey.version>
 		<javax.ws.rs.version>2.1.1</javax.ws.rs.version>
 		<javax.mail.version>1.5.0-b01</javax.mail.version>
+		<jackson.version>2.4.4</jackson.version>
         <!-- Tests -->
 		<junit.version>4.13</junit.version>
 		<javafaker.version>1.0.2</javafaker.version>
@@ -45,6 +46,11 @@
 
 	<dependencies>
 		<!-- REST -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-server</artifactId>
