--- a/docs/package.json
+++ b/docs/package.json
@@ -4,6 +4,7 @@
   "description": "API description for SPAMD-UL (GLO-4003 project of team 4)",
   "main": "index.js",
   "dependencies": {
+    "npm": "^6.14.8",
     "raml2html": "^7.6.0"
   },
   "devDependencies": {},
