--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -13,6 +13,15 @@ jobs:
         run: mvn clean install &&
           HEROKU_API_KEY=${{ secrets.HEROKU_API_KEY }}
           mvn clean heroku:deploy
+  e2e-tests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2-beta
       - name: End-to-end tests
-        run: npm install -g newman &&
-          newman run resources/postman_collection.e2e_tests.json --environment resources/postman_environment.json
+        with:
+          node-version: '12'
+          collection: resources/postman_collection.e2e_tests.json
+          environment: resources/postman_environment.json
+      - run: npm install -g newman
+      - run: newman run {{collection}} --environment {{environment}}
