--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,9 +19,5 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2-beta
       - name: End-to-end tests
-        with:
-          node-version: '12'
-          collection: resources/postman_collection.e2e_tests.json
-          environment: resources/postman_environment.json
-      - run: npm install -g newman
-      - run: newman run {{collection}} --environment {{environment}}
+        run: npm install -g newman &&
+          newman run resources/postman_environment.json --environment resources/postman_collection.e2e_tests.json
