--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,6 +14,7 @@ jobs:
           HEROKU_API_KEY=${{ secrets.HEROKU_API_KEY }}
           mvn clean heroku:deploy
   e2e-tests:
+    needs: deploy
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -21,7 +22,5 @@ jobs:
         uses: actions/setup-node@v2-beta
         with:
           node-version: '12'
-          collection: resources/postman_environment.json
-          environment: resources/postman_collection.e2e_tests.json
       - run: npm install -g newman
-      - run: newman run {{collection}} --environment {{environment}}
+      - run: newman run resources/postman_collection.e2e_tests.json --environment resources/postman_environment.json
