--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<maven-compiler.version>3.8.1</maven-compiler.version>
 		<exec-maven.version>3.0.0</exec-maven.version>
 		<main-class>ca.ulaval.glo4003.Main</main-class>
+		<quartz.version>2.3.2</quartz.version>
 		<!-- REST -->
 		<jetty.version>9.4.31.v20200723</jetty.version>
 		<jersey.version>2.8</jersey.version>
@@ -140,6 +141,11 @@
 			<groupId>javax.activation</groupId>
 			<artifactId>activation</artifactId>
 			<version>${javax.activation.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz</artifactId>
+			<version>${quartz.version}</version>
 		</dependency>
 	</dependencies>
 
