--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 		<main-class>ca.ulaval.glo4003.Main</main-class>
 		<!-- REST -->
 		<jetty.version>9.4.33.v20201020</jetty.version>
-		<jersey.version>2.8</jersey.version>
+		<jersey.version>2.32</jersey.version>
 		<javax.ws.rs.version>2.1.1</javax.ws.rs.version>
 		<javax.mail.version>1.5.0-b01</javax.mail.version>
 		<jackson.version>2.11.2</jackson.version>
@@ -84,6 +84,12 @@
 		<dependency>
 			<groupId>org.glassfish.jersey.media</groupId>
 			<artifactId>jersey-media-moxy</artifactId>
+			<version>${jersey.version}</version>
+		</dependency>
+        <!-- We do not use hk2, our injection is homemade. Jersey 2.26+ requires this dependency -->
+		<dependency>
+			<groupId>org.glassfish.jersey.inject</groupId>
+			<artifactId>jersey-hk2</artifactId>
 			<version>${jersey.version}</version>
 		</dependency>
 		<dependency>
