[DOC] Use english parking periods

--- a/docs/examples/parkingAreas/get-parking-areas-response.json
+++ b/docs/examples/parkingAreas/get-parking-areas-response.json
@@ -3,7 +3,7 @@
     "parkingArea": "Zone1",
     "parkingPeriodPrice": [
       {
-        "period": "Mensuel 1",
+        "period": "monthly",
         "price": 183
       },
       {
@@ -16,7 +16,7 @@
     "parkingArea": "Zone2",
     "parkingPeriodPrice": [
       {
-        "period": "Mensuel 1",
+        "period": "monthly",
         "price": 121
       },
       {
