--- a/docs/examples/reports/get-reports-parking-areas-day-of-month-response.json
+++ b/docs/examples/reports/get-reports-parking-areas-day-of-month-response.json
@@ -1,6 +1,6 @@
 [
   {
-    "period": "january",
+    "period": "01-01-2020",
     "data": [
       {
         "dimensions": [
@@ -12,7 +12,7 @@
         "metrics": [
           {
             "name": "gateEntries",
-            "value": 21.0
+            "value": 2.0
           }
         ]
       },
@@ -26,14 +26,14 @@
         "metrics": [
           {
             "name": "gateEntries",
-            "value": 19.0
+            "value": 1.0
           }
         ]
       }
     ]
   },
   {
-    "period": "february",
+    "period": "02-01-2020",
     "data": [
       {
         "dimensions": [
@@ -45,7 +45,7 @@
         "metrics": [
           {
             "name": "gateEntries",
-            "value": 48.0
+            "value": 5.0
           }
         ]
       },
@@ -59,7 +59,7 @@
         "metrics": [
           {
             "name": "gateEntries",
-            "value": 10.0
+            "value": 1.0
           }
         ]
       }
