[FEATURE] Rename parking periods in doc API

--- a/docs/examples/parkingAreas/get-parking-areas-response.json
+++ b/docs/examples/parkingAreas/get-parking-areas-response.json
@@ -7,7 +7,7 @@
         "price": 183
       },
       {
-        "period": "1 session",
+        "period": "1 semester",
         "price": 544
       }
     ]
@@ -20,7 +20,7 @@
         "price": 121
       },
       {
-        "period": "1 session",
+        "period": "1 semester",
         "price": 366
       }
     ]
